current:
  * fixes to new iphone help display
  * migrate iphone help display to integrated web page (NB resource updates!)
    - allows easier customization
    - local links open directly, external links confirm and jump out to Safari
    - JavaScript hook for help context customization
    - also enhanced default help (note this changes the required resources)
    - fix to disable scanning during help overlay
    - thanks to iafanasyev and others for detailed suggestions
  * fix iphone custom overlay response (bug #2959617)
    - thanks to an anonymous user for the patch!
  * iphone widget performance tuning enhancements
    - fix crop calculation bug in ZBarImage
    - add properties to control pre-scan image cropping and scaling
    - add property for scanner cache control
    - enable some scanner density control (FIXME should be property)
    - fix ifdef for quality control (FIXME should be property)
    - add "sequence" mode test (not actually so useful)
  * realtime scanning for iphone widget
    - uses UIGetScreenImage() (NB private)
    - ZBarImage from CGImage (instead of UIImage)
    - add crop to scaling step
    - expose symbol set unfiltered results
  * add Java interface to library via JNI
    - add Java tools and JNI build tests to configure
    - fix compiler warnings from binary output changes
  * fix output of binary data in zbarimg and zbarcam
    - thanks to fukuchi for a patch!
    - add base64 format for binary xml output
  * add coarse symbol orientation information (patch #2913094)
    - thanks to Anssi for a patch!
    - add decode direction feedback to decoder
    - update C++, Python, Perl and ObjC wrappers
    - add orientation to test suites
  * fix inconsistent fourcc endian handling bugs (bug #2918994)
    - thanks to jdccdevel for a patch!
    - add fourcc conversion and parse interfaces to zbar.h
  * report QR immediately for video (no inter-frame consistency check)
  * iphone widget back compat updates, add basic test app